--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "createDB": "psql -U okanban -d okanban -f ./db/create_db.sql",
-    "seedDB": "psql -U okanban -d okanban -f ./db/seed_db.sql"
+    "seedDB": "psql -U okanban -d okanban -f ./db/seed_db.sql",
+    "build:dev": "browserify -e src/app.js -o assets/js/bundle.js",
+    "build:prod": "browserify -e src/app.js -o assets/js/bundle.min.js -p tinyify"
   },
   "repository": {
     "type": "git",
@@ -24,10 +26,14 @@
   "homepage": "https://github.com/O-clock-Flamel/S06-oKanban-YannCreach#readme",
   "dependencies": {
     "assert": "^2.0.0",
+    "browserify": "^17.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "sortablejs": "^1.15.0",
+    "tinyify": "^3.1.0"
   }
 }
